--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -642,6 +642,10 @@ video {
   height: 100px;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
 .h-\[50vh\] {
   height: 50vh;
 }
@@ -652,14 +656,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[150px\] {
-  height: 150px;
-}
-
-.h-\[120px\] {
-  height: 120px;
 }
 
 .max-h-screen {
@@ -678,6 +674,10 @@ video {
   width: 100%;
 }
 
+.w-\[600px\] {
+  width: 600px;
+}
+
 .max-w-\[1000px\] {
   max-width: 1000px;
 }
@@ -692,6 +692,10 @@ video {
 
 .max-w-\[400px\] {
   max-width: 400px;
+}
+
+.resize-y {
+  resize: vertical;
 }
 
 .appearance-none {
@@ -763,11 +767,6 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
 }
 
 .overflow-scroll {
@@ -1101,6 +1100,10 @@ video {
   opacity: 0.2;
 }
 
+.outline-0 {
+  outline-width: 0px;
+}
+
 .invert {
   --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1203,6 +1206,31 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-customOrange:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 132 3 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-customOrange:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(252 132 3 / var(--tw-ring-opacity));
+}
+
 @media (min-width: 768px) {
   .md\:mx-0 {
     margin-left: 0px;
@@ -1236,6 +1264,18 @@ video {
 
   .md\:w-\[500px\] {
     width: 500px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .md\:w-\[00px\] {
+    width: 00px;
+  }
+
+  .md\:w-\[3500px\] {
+    width: 3500px;
   }
 
   .md\:grid-cols-2 {
