--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1268,6 +1268,18 @@ input:checked + .toggle-bg {
   height: 6rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
 .max-h-screen {
   max-height: 100vh;
 }
