--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1136,6 +1136,11 @@ input:checked + .toggle-bg {
   margin-bottom: 50px;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -1280,6 +1285,14 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
 .max-w-\[1000px\] {
   max-width: 1000px;
 }
@@ -1294,6 +1307,14 @@ input:checked + .toggle-bg {
 
 .max-w-\[400px\] {
   max-width: 400px;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .flex-1 {
@@ -1455,6 +1476,10 @@ input:checked + .toggle-bg {
 
 .gap-y-7 {
   row-gap: 1.75rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2236,6 +2261,13 @@ input:checked + .toggle-bg {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mx-0 {
     margin-left: 0px;
@@ -2283,12 +2315,24 @@ input:checked + .toggle-bg {
     flex-direction: row;
   }
 
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
   .md\:justify-start {
     justify-content: flex-start;
   }
 
   .md\:justify-end {
     justify-content: flex-end;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:gap-x-7 {
@@ -2317,8 +2361,17 @@ input:checked + .toggle-bg {
     padding-bottom: 1.25rem;
   }
 
+  .md\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-3xl {
@@ -2357,12 +2410,29 @@ input:checked + .toggle-bg {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-\[600px\] {
+    height: 600px;
+  }
+
   .lg\:w-\[160px\] {
     width: 160px;
   }
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
 
