--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1076,6 +1076,11 @@ input:checked + .toggle-bg {
   grid-column: span 3 / span 3;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -1134,11 +1139,6 @@ input:checked + .toggle-bg {
 .my-\[50px\] {
   margin-top: 50px;
   margin-bottom: 50px;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
 .mb-1 {
@@ -1285,14 +1285,6 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
 .max-w-\[1000px\] {
   max-width: 1000px;
 }
@@ -1309,12 +1301,8 @@ input:checked + .toggle-bg {
   max-width: 400px;
 }
 
-.max-w-\[100px\] {
-  max-width: 100px;
-}
-
-.max-w-lg {
-  max-width: 32rem;
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 
 .flex-1 {
@@ -1397,6 +1385,14 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1458,10 +1454,6 @@ input:checked + .toggle-bg {
        column-gap: 2.25rem;
 }
 
-.gap-y-1 {
-  row-gap: 0.25rem;
-}
-
 .gap-y-10 {
   row-gap: 2.5rem;
 }
@@ -1474,12 +1466,12 @@ input:checked + .toggle-bg {
   row-gap: 0.75rem;
 }
 
-.gap-y-7 {
-  row-gap: 1.75rem;
-}
-
 .gap-y-5 {
   row-gap: 1.25rem;
+}
+
+.gap-y-7 {
+  row-gap: 1.75rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2261,13 +2253,6 @@ input:checked + .toggle-bg {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 640px) {
-  .sm\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-}
-
 @media (min-width: 768px) {
   .md\:mx-0 {
     margin-left: 0px;
@@ -2319,20 +2304,12 @@ input:checked + .toggle-bg {
     align-items: flex-start;
   }
 
-  .md\:items-center {
-    align-items: center;
-  }
-
   .md\:justify-start {
     justify-content: flex-start;
   }
 
   .md\:justify-end {
     justify-content: flex-end;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
   }
 
   .md\:gap-x-7 {
@@ -2356,14 +2333,14 @@ input:checked + .toggle-bg {
     border-radius: 0.75rem;
   }
 
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
   .md\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .md\:pt-0 {
@@ -2395,20 +2372,6 @@ input:checked + .toggle-bg {
   }
 }
 
-@media (min-width: 810px) {
-  .min-\[810px\]\:flex-row {
-    flex-direction: row;
-  }
-
-  .min-\[810px\]\:gap-y-0 {
-    row-gap: 0px;
-  }
-
-  .min-\[810px\]\:text-left {
-    text-align: left;
-  }
-}
-
 @media (min-width: 1024px) {
   .lg\:h-\[600px\] {
     height: 600px;
@@ -2420,10 +2383,6 @@ input:checked + .toggle-bg {
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
   }
 
   .lg\:items-center {
