--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1136,6 +1136,11 @@ input:checked + .toggle-bg {
   margin-bottom: 50px;
 }
 
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -1224,6 +1229,10 @@ input:checked + .toggle-bg {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-32 {
   height: 8rem;
 }
@@ -1262,6 +1271,10 @@ input:checked + .toggle-bg {
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-4 {
@@ -1903,6 +1916,11 @@ input:checked + .toggle-bg {
   color: rgb(33 33 33 / var(--tw-text-opacity));
 }
 
+.text-customGreen {
+  --tw-text-opacity: 1;
+  color: rgb(46 209 111 / var(--tw-text-opacity));
+}
+
 .text-customOrange {
   --tw-text-opacity: 1;
   color: rgb(252 132 3 / var(--tw-text-opacity));
@@ -2281,6 +2299,10 @@ input:checked + .toggle-bg {
 
   .md\:w-\[50vw\] {
     width: 50vw;
+  }
+
+  .md\:w-\[40vw\] {
+    width: 40vw;
   }
 
   .md\:grid-cols-2 {
